<resources>
    <string name="app_name">Cookmate</string>
    <string name="Get_Started">Get Started</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="new_to_cookmate">New to Cookmate?</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="username">Username</string>
    <string name="error_empty_fields">ERROR: Not all fields have been completed!</string>
    <string name="error_invalid_email">ERROR: Entered email is invalid!</string>
    <string name="error_user_exists">ERROR: This user already exists!</string>
    <string name="error_unknown">UNKNOWN ERROR!</string>
    <string name="error_name_taken">Username is already taken. Please choose another.</string>
    <string name="check_error">Error checking username: </string>

    <string name="recipe_published">Recipes Published</string>
    <string name="Recipe_Categories">Recipe Categories</string>
    <string name="Explore_New_Recipes">Explore New Recipes</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="image_upload">Image Upload</string>
    <string name="Add">Add</string>
    <string name="preparation_steps">Preparation Steps</string>
    <string name="description">Description</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="in_grams">In Grams (g)</string>
    <string name="in_kcal">In kilocalories (kcal)</string>
    <string name="Category">Category</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Cooking_Time">Cooking Time</string>
    <string name="Serving_Size">Serving Size</string>
    <string name="Prep_Time">Prep Time</string>
    <string name="Save_Recipe">Save Recipe</string>
    <string name="Save_And_Publish">Save and Publish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>